fixed brave-based desktop apps

--- a/.local/share/applications/gcal.desktop
+++ b/.local/share/applications/gcal.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Google Calendar
-Exec=/bin/brave-browser-stable --ozone-platform=wayland --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://calendar.google.com/calendar/u/1/r
+Exec=/usr/bin/brave --ozone-platform=wayland --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://calendar.google.com/calendar/u/1/r
 Terminal=false
 Type=Application
 Icon=calendar
