--- a/.local/share/applications/gmail_other.desktop
+++ b/.local/share/applications/gmail_other.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Gmail (Other)
-Exec=/bin/brave-browser-stable --ozone-platform=wayland --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://mail.google.com/mail/u/0
+Exec=/usr/bin/brave --ozone-platform=wayland --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://mail.google.com/mail/u/0
 Terminal=false
 Type=Application
 Icon=gmail
