fixed startup apps in hypr

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,7 +27,8 @@ exec-once = waybar
 exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = wl-paste --watch cliphist store
-exec-once = Telegram --autostart &
+exec-once = telegram-desktop --autostart &
+exec-once = blueman-applet
 
 source = ~/.cache/wal/colors-hyprland.conf
 
