fixed notification issues with volume and brightness script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -106,6 +106,8 @@ gestures {
 
 windowrule = float, ^(org.telegram.desktop)$
 windowrule = center, ^(org.telegram.desktop)$
+windowrule = float, org.kde.polkit-kde-authentication-agent-1
+windowrule = center, org.kde.polkit-kde-authentication-agent-1
 
 $mainMod = SUPER
 
