fixed ime issues on brave

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -74,7 +74,8 @@
     },
     "tray": {
         "icon-size": 14,
-        "spacing": 10
+        "spacing": 10,
+        "show-passive-items": true
     },
     "idle_inhibitor": {
         "format": "{icon}",
