--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,15 +20,16 @@ monitor = eDP-1, 3000x2000@60, 0x0, 2
 monitor = ,preferred,auto,auto
 
 exec-once = swww init
+exec-once = waybar
 exec-once = iio-hyprland
 exec-once = /usr/lib64/polkit-kde-authentication-agent-1
 exec-once = swaync
-exec-once = waybar
+exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
 exec-once = pulseaudio -D
-exec-once = wl-paste --watch cliphist store
-exec-once = telegram-desktop -autostart
 exec-once = blueman-applet
+exec-once = telegram-desktop -autostart
+exec-once = ~/.config/scripts/start_ime.sh
 
 source = ~/.cache/wal/colors-hyprland.conf
 
@@ -36,6 +37,9 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORM,wayland
 env = XDG_CURRENT_DESKTOP,hyprland
 env = _JAVA_AWT_WM_NONREPARENTING,1
+env = XMODIFIERS,@im=fcitx
+env = GTK_IM_MODULE,wayland
+env = QT_IM_MODULE,fcitx
 
 input {
     kb_layout = us
@@ -75,11 +79,7 @@ decoration {
 
 animations {
     enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -108,13 +108,15 @@ windowrule = float, ^(org.telegram.desktop)$
 windowrule = center, ^(org.telegram.desktop)$
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = center, org.kde.polkit-kde-authentication-agent-1
+windowrule = pseudo,fcitx
 
 $mainMod = SUPER
 
 bind = ALT, Space, exec, $launcher1
 bind = $mainMod, Return, exec, $term
-bind = $mainMod, E, exec, thunar
+bind = $mainMod, E, exec, pcmanfm
 
+#bind = SUPER, Space, pass, 
 bind = $mainMod, W,         killactive,
 bind = $mainMod, V,         exec,   $menu_paste
 bind = $mainMod SHIFT, F,   togglefloating,
@@ -129,16 +131,16 @@ bind=,XF86MonBrightnessDown,   exec, $brightness down 5
 bind=,XF86AudioMute,           exec, $volume mute
 bind=,XF86AudioLowerVolume,    exec, $volume down 5
 bind=,XF86AudioRaiseVolume,    exec, $volume up 5
-bind=,XF86AudioMicMute,        exec, amixer -q set Capture togglemute
+bind=,XF86AudioMicMute,        exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
 bind=,XF86AudioPrev,           exec, playerctl previous
 bind=,XF86AudioNext,           exec, playerctl next
 bind=,XF86AudioPlay,           exec, playerctl play-pause
-# bind=SHIFT,F9,                 exec, playerctl position 5-
-# bind=SHIFT,F6,                 exec, $volume_sh down 1
-# bind=SHIFT,F7,                 exec, $volume_sh up 1
-# bind=SHIFT,F3,                 exec, $brightness_sh up 1
-# bind=SHIFT,F2,                 exec, $brightness_sh down 1
-# bind=SHIFT,F11,                exec, playerctl position 5+
+bind=SHIFT,F9,                 exec, playerctl position 5-
+bind=SHIFT,F6,                 exec, $volume down 1
+bind=SHIFT,F7,                 exec, $volume up 1
+bind=SHIFT,F3,                 exec, $brightness up 1
+bind=SHIFT,F2,                 exec, $brightness down 1
+bind=SHIFT,F11,                exec, playerctl position 5+
 
 bind=CONTROL SHIFT,Print, exec, $printscr_sw
 bind=SHIFT,Print, exec, $printscr_ss
