--- a/.local/share/applications/spotify.desktop
+++ b/.local/share/applications/spotify.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Spotify
-Exec=/bin/spotify --ozone-platform=wayland --enable-features=WaylandWindowDecorations %U
+Exec=/bin/spotify --enable-features=WaylandWindowDecorations --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime %U
 Terminal=false
 Type=Application
 Icon=spotify
