added fcixit files and fixing qt tray issue

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-applet
-exec-once = telegram-desktop -autostart
+exec-once = ~/.config/scripts/dbus_waiter.sh
 exec-once = ~/.config/scripts/start_ime.sh
 
 source = ~/.cache/wal/colors-hyprland.conf
