ye it not working, the qt tray

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,6 @@ exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-applet
-exec-once = ~/.config/scripts/dbus_waiter.sh
 exec-once = ~/.config/scripts/start_ime.sh
 
 source = ~/.cache/wal/colors-hyprland.conf
@@ -51,9 +50,9 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = yes
-        disable_while_typing = yes
-        middle_button_emulation = yes
+        natural_scroll = true
+        disable_while_typing = true
+        middle_button_emulation = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -66,19 +65,19 @@ general {
     col.active_border = rgba($color14ee)
     col.inactive_border = rgba($color1ff)
     layout = dwindle
-    resize_on_border = yes
+    resize_on_border = true
 }
 
 decoration {
     rounding = 10
-    drop_shadow = yes
+    drop_shadow = true
     shadow_range = 10
     shadow_render_power = 2
     col.shadow = rgba($color13ee)
 }
 
 animations {
-    enabled = yes
+    enabled = true
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
@@ -89,8 +88,9 @@ animations {
 }
 
 dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # you probably want this
+
 }
 
 master {
@@ -102,6 +102,11 @@ gestures {
     workspace_swipe_fingers = 4
     workspace_swipe_distance = 200
     workspace_swipe_cancel_ratio = 0.3
+}
+
+misc {
+    disable_hyprland_logo = true
+    force_hypr_chan = true
 }
 
 windowrule = float, ^(org.telegram.desktop)$
@@ -181,3 +186,11 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+
+
+
+
+
+
+exec-once = "sh -c 'sleep 5; telegram-desktop -autostart &'"
