--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -109,11 +109,29 @@ misc {
     force_hypr_chan = true
 }
 
+windowrule = float,        ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = size 70% 70%, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = opacity 0.95, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = center,       ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+
+windowrule = float, ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = size 70% 70%, ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = opacity 0.95, ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = center, ^(brave-mail.google.com__mail_u_.-Default)$
+
 windowrule = float, ^(org.telegram.desktop)$
 windowrule = center, ^(org.telegram.desktop)$
+windowrule = opacity 0.95, ^(org.telegram.desktop)$
+
+windowrule = float, ^(brave-web.whatsapp.com.+)$
+windowrule = size 70% 70%, ^(brave-web.whatsapp.com.+)$
+windowrule = opacity 0.95, ^(brave-web.whatsapp.com.+)$
+windowrule = center, ^(brave-web.whatsapp.com.+)$
+
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = center, org.kde.polkit-kde-authentication-agent-1
 windowrule = pseudo,fcitx
+
 
 $mainMod = SUPER
 
@@ -122,14 +140,18 @@ bind = $mainMod, Return, exec, $term
 bind = $mainMod, E, exec, pcmanfm
 
 #bind = SUPER, Space, pass, 
-bind = $mainMod, W,         killactive,
+bind = $mainMod, W,         exec, ~/.config/scripts/selective_kill.sh
+bind = $mainMod CONTROL, W, killactive,
 bind = $mainMod, V,         exec,   $menu_paste
-bind = $mainMod SHIFT, F,   togglefloating,
+bind = $mainMod, F,         fullscreen, 1
+bind = $mainMod SHIFT, F,   fullscreen, 0
+bind = $mainMod, Minus,     togglefloating,
 bind = $mainMod, N,         exec,   swaync-client -t -sw
 bind = $mainMod, Escape,    exec,   $powermenu
 
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, O, pseudo, # dwindle
 bind = $mainMod, Tab, togglesplit, # dwindle
+bind = $mainMod, T, exec, ~/.config/scripts/animations.sh
 
 bind=,XF86MonBrightnessUp,     exec, $brightness up 5
 bind=,XF86MonBrightnessDown,   exec, $brightness down 5
@@ -157,6 +179,16 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
+
+bind = $mainMod CONTROL, h, resizeactive, l
+bind = $mainMod CONTROL, l, resizeactive, r
+bind = $mainMod CONTROL, k, resizeactive, u
+bind = $mainMod CONTROL, j, resizeactive, d
+
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -166,31 +198,27 @@ bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mainMod, 0, exec, ~/.config/scripts/swap_scratchpad.sh
+bind = $mainMod, Delete, movetoworkspacesilent, special
 
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-bind = $mainMod, Comma, workspace, e-1
-bind = $mainMod, Period, workspace, e+1
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+bind = $mainMod, Comma, workspace, r-1
+bind = $mainMod, Period, workspace, r+1
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-
-
-
-
 
 
 exec-once = "sh -c 'sleep 5; telegram-desktop -autostart &'"
