YES SCRATCHPAD FUNCTION

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -146,11 +146,16 @@ bind = $mainMod, V,         exec,   $menu_paste
 bind = $mainMod, F,         fullscreen, 1
 bind = $mainMod SHIFT, F,   fullscreen, 0
 bind = $mainMod, Minus,     togglefloating,
+bind = $mainMod, Minus,     centerwindow,
 bind = $mainMod, N,         exec,   swaync-client -t -sw
 bind = $mainMod, Escape,    exec,   $powermenu
 
 bind = $mainMod, O, pseudo, # dwindle
 bind = $mainMod, Tab, togglesplit, # dwindle
+bind = ALT, Tab, cyclenext,
+bind = ALT, Tab, bringactivetotop,
+bind = ALT SHIFT, Tab, cyclenext, prev
+bind = ALT SHIFT, Tab, bringactivetotop,
 bind = $mainMod, T, exec, ~/.config/scripts/animations.sh
 
 bind=,XF86MonBrightnessUp,     exec, $brightness up 5
@@ -199,7 +204,6 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, exec, ~/.config/scripts/swap_scratchpad.sh
-bind = $mainMod, Delete, movetoworkspacesilent, special
 
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
 bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
@@ -210,7 +214,7 @@ bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
 bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:hidden
 bind = $mainMod, Comma, workspace, r-1
 bind = $mainMod, Period, workspace, r+1
 
@@ -219,6 +223,3 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-
-exec-once = "sh -c 'sleep 5; telegram-desktop -autostart &'"
