--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,6 +29,7 @@ exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = ~/.config/scripts/start_ime.sh
+exec-once = gio launch .config/autostart/*
 
 source = ~/.cache/wal/colors-hyprland.conf
 
