--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -142,7 +142,7 @@ bind = $mainMod, E, exec, pcmanfm
 
 #bind = SUPER, Space, pass, 
 bind = $mainMod, W,         exec, ~/.config/scripts/selective_kill.sh
-bind = $mainMod CONTROL, W, killactive,
+bind = $mainMod SHIFT, W,   killactive,
 bind = $mainMod, V,         exec,   $menu_paste
 bind = $mainMod, F,         fullscreen, 1
 bind = $mainMod SHIFT, F,   fullscreen, 0
@@ -205,6 +205,8 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, exec, ~/.config/scripts/swap_scratchpad.sh
+bind = $mainMod, Comma, workspace, r-1
+bind = $mainMod, Period, workspace, r+1
 
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
 bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
@@ -216,8 +218,8 @@ bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:hidden
-bind = $mainMod, Comma, workspace, r-1
-bind = $mainMod, Period, workspace, r+1
+bind = $mainMod SHIFT, Comma, movetoworkspacesilent, r-1
+bind = $mainMod SHIFT, Period, movetoworkspacesilent, r+1
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
