wofi case insensitive

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ $term = kitty
 $filebrowser = thunar
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
-$launcher1 = wofi --show drun -G
+$launcher1 = wofi --show drun -Gi
 $launcher2 = wofi --show drun -G
 $powermenu = wofi --show drun -G
 
