animation toggle for hypr, launcher icons and shortcut for brave

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ $term = kitty
 $filebrowser = thunar
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
-$launcher1 = wofi --show drun -Gi
+$launcher1 = wofi --show drun -GiD key_expand=Tab --allow-images
 $launcher2 = wofi --show drun -G
 $powermenu = wofi --show drun -G
 
@@ -75,6 +75,8 @@ decoration {
     shadow_range = 10
     shadow_render_power = 2
     col.shadow = rgba($color13ee)
+    active_opacity = 1.0
+    inactive_opacity = 0.95
 }
 
 animations {
@@ -110,23 +112,24 @@ misc {
     force_hypr_chan = true
 }
 
+$spd_opacity = 0.95
 windowrule = float,        ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = size 70% 70%, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = opacity 0.95, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = opacity $spd_opacity, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = center,       ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 
 windowrule = float, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = size 70% 70%, ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = opacity 0.95, ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = center, ^(brave-mail.google.com__mail_u_.-Default)$
 
 windowrule = float, ^(org.telegram.desktop)$
 windowrule = center, ^(org.telegram.desktop)$
-windowrule = opacity 0.95, ^(org.telegram.desktop)$
+windowrule = opacity $spd_opacity, ^(org.telegram.desktop)$
 
 windowrule = float, ^(brave-web.whatsapp.com.+)$
 windowrule = size 70% 70%, ^(brave-web.whatsapp.com.+)$
-windowrule = opacity 0.95, ^(brave-web.whatsapp.com.+)$
+windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
 windowrule = center, ^(brave-web.whatsapp.com.+)$
 
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
@@ -139,8 +142,10 @@ $mainMod = SUPER
 bind = ALT, Space, exec, $launcher1
 bind = $mainMod, Return, exec, $term
 bind = $mainMod, E, exec, pcmanfm
+bind = $mainMod, E, exec, brave-web
 
 #bind = SUPER, Space, pass, 
+bind = $mainMod, T,         exec, ~/.config/scripts/animations.sh toggle
 bind = $mainMod, W,         exec, ~/.config/scripts/selective_kill.sh
 bind = $mainMod SHIFT, W,   killactive,
 bind = $mainMod, V,         exec,   $menu_paste
@@ -157,7 +162,6 @@ bind = ALT, Tab, cyclenext,
 bind = ALT, Tab, bringactivetotop,
 bind = ALT SHIFT, Tab, cyclenext, prev
 bind = ALT SHIFT, Tab, bringactivetotop,
-bind = $mainMod, T, exec, ~/.config/scripts/animations.sh
 
 bind=,XF86MonBrightnessUp,     exec, $brightness up 5
 bind=,XF86MonBrightnessDown,   exec, $brightness down 5
