fixed brave shortcut

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -142,7 +142,7 @@ $mainMod = SUPER
 bind = ALT, Space, exec, $launcher1
 bind = $mainMod, Return, exec, $term
 bind = $mainMod, E, exec, pcmanfm
-bind = $mainMod, E, exec, brave-web
+bind = $mainMod, B, exec, brave
 
 #bind = SUPER, Space, pass, 
 bind = $mainMod, T,         exec, ~/.config/scripts/animations.sh toggle
