--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,6 +40,7 @@ env = _JAVA_AWT_WM_NONREPARENTING,1
 env = XMODIFIERS,@im=fcitx
 env = GTK_IM_MODULE,wayland
 env = QT_IM_MODULE,fcitx
+env = RANGER_LOAD_DEFAULT_RC,FALSE
 
 input {
     kb_layout = us
@@ -110,6 +111,8 @@ gestures {
 misc {
     disable_hyprland_logo = true
     force_hypr_chan = true
+    enable_swallow = true
+    swallow_regex = ^(kitty)$
 }
 
 $spd_opacity = 0.95
@@ -146,6 +149,7 @@ bind = $mainMod, B, exec, brave
 
 #bind = SUPER, Space, pass, 
 bind = $mainMod, T,         exec, ~/.config/scripts/animations.sh toggle
+bind = $mainMod SHIFT, C,   exec, hyprctl reload
 bind = $mainMod, W,         exec, ~/.config/scripts/selective_kill.sh
 bind = $mainMod SHIFT, W,   killactive,
 bind = $mainMod, V,         exec,   $menu_paste
@@ -221,7 +225,7 @@ bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
 bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:hidden
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:
 bind = $mainMod SHIFT, Comma, movetoworkspacesilent, r-1
 bind = $mainMod SHIFT, Period, movetoworkspacesilent, r+1
 
