scratchpad edits, waybar now double

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ $printscr_f = $printscr_fullscreen - | tee $(echo $printscr_savepath)-full.png |
 $printscr_ss = $printscr_select - | tee $(echo $printscr_savepath)-original.png | swappy -f -
 $printscr_sw = ~/.config/scripts/print_window.sh
 
+$scratchpad_name = 󰉇
 
 monitor = eDP-1, 3000x2000@60, 0x0, 2
 monitor = ,preferred,auto,auto
@@ -29,7 +30,8 @@ exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = ~/.config/scripts/start_ime.sh
-exec-once = gio launch .config/autostart/*
+exec-once = ~/.config/scripts/start_wvkbd.sh
+# exec-once = gio launch .config/autostart/*
 
 source = ~/.cache/wal/colors-hyprland.conf
 
@@ -41,13 +43,10 @@ env = XMODIFIERS,@im=fcitx
 env = GTK_IM_MODULE,wayland
 env = QT_IM_MODULE,fcitx
 env = RANGER_LOAD_DEFAULT_RC,FALSE
+env = SCRATCHPAD_NAME,$scratchpad_name
 
 input {
     kb_layout = us
-    # kb_variant =
-    # kb_model =
-    # kb_options =
-    # kb_rules =
 
     follow_mouse = 1
 
@@ -83,18 +82,17 @@ decoration {
 animations {
     enabled = true
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = windows,        1, 7,   myBezier
+    animation = windowsOut,     1, 5,   default, popin 80%
+    animation = border,         1, 10,  myBezier
+    animation = borderangle,    1, 8,   default
+    animation = fade,           1, 7,   default
+    animation = workspaces,     1, 6,   default
 }
 
 dwindle {
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # you probably want this
-
+    pseudotile = true 
+    preserve_split = true 
 }
 
 master {
@@ -104,8 +102,8 @@ master {
 gestures {
     workspace_swipe = on
     workspace_swipe_fingers = 4
-    workspace_swipe_distance = 200
-    workspace_swipe_cancel_ratio = 0.3
+    workspace_swipe_distance = 100
+    workspace_swipe_cancel_ratio = 0.2
 }
 
 misc {
@@ -225,7 +223,7 @@ bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
 bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
 bind = $mainMod SHIFT, Comma, movetoworkspacesilent, r-1
 bind = $mainMod SHIFT, Period, movetoworkspacesilent, r+1
 
