--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,7 +30,8 @@ exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = ~/.config/scripts/start_ime.sh
-exec-once = ~/.config/scripts/start_wvkbd.sh
+exec-once = squeekboard
+# exec-once = ~/.config/scripts/start_wvkbd.sh
 # exec-once = gio launch .config/autostart/*
 
 source = ~/.cache/wal/colors-hyprland.conf
