did some kb stuff, ditched leumer dm, starting on launcher

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,9 +3,9 @@ $term = kitty
 $filebrowser = thunar
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
-$launcher1 = wofi --show drun -GiD key_expand=Tab --allow-images
-$launcher2 = wofi --show drun -G
-$powermenu = wofi --show drun -G
+$launcher1 = ~/.config/scripts/app_launcher.sh
+$launcher2 = ~/.config/scripts/icon_launcher.sh
+$powermenu = ~/.config/scripts/powermenu_launcher.sh
 
 $printscr_savepath = ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S')
 $printscr_fullscreen = grim
@@ -30,7 +30,7 @@ exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = ~/.config/scripts/start_ime.sh
-exec-once = squeekboard
+exec-once = ~/.config/scripts/start_squeekboard.sh
 # exec-once = ~/.config/scripts/start_wvkbd.sh
 # exec-once = gio launch .config/autostart/*
 
