touchscreen now swipes left and right

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,6 +31,7 @@ exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
+exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = ~/.config/scripts/start_wvkbd.sh
 # exec-once = gio launch .config/autostart/*
 
