lots of hooks, especially wofi and wal - use wal_update

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = ~/.config/scripts/start_wvkbd.sh
-# exec-once = gio launch .config/autostart/*
+exec-once = gio launch .config/autostart/*
 
 source = ~/.cache/wal/colors-hyprland.conf
 
@@ -139,6 +139,10 @@ windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = center, org.kde.polkit-kde-authentication-agent-1
 windowrule = pseudo,fcitx
 
+windowrule = float, ^(wofi)$
+windowrule = center, ^(wofi)$
+windowrule = noanim, ^(wofi)$
+windowrule = noborder, ^(wofi)$
 
 $mainMod = SUPER
 
