moved from swww to wbg

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,8 @@ $scratchpad_name = 󰉇
 monitor = eDP-1, 3000x2000@60, 0x0, 2
 monitor = ,preferred,auto,auto
 
-exec-once = swww init
+#exec-once = swww init
+exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
 exec-once = waybar
 exec-once = iio-hyprland
 exec-once = /usr/lib64/polkit-kde-authentication-agent-1
@@ -116,6 +117,8 @@ misc {
 }
 
 $spd_opacity = 0.95
+windowrule = opacity $spd_opacity, ^(kitty)$
+
 windowrule = float,        ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = size 70% 70%, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = opacity $spd_opacity, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
