--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -26,7 +26,7 @@
         "custom/kb",
     ],
     "custom/media": {
-        "escape": true,
+        "escape": false,
         "return-type": "json",
         "max-length": 40,
         "on-click": "playerctl play-pause",
@@ -34,7 +34,8 @@
         "smooth-scrolling-threshold": 10, 
         "on-scroll-up": "playerctl next",
         "on-scroll-down": "playerctl previous",
-        "exec" : "$HOME/.config/waybar/custom_modules/mediaplayer.py"
+        "exec" : "$HOME/.config/waybar/custom_modules/mediaplayer.py",
+        "tooltip": true
     },
     "custom/weather": {
         "exec": "$HOME/.config/waybar/custom_modules/get_weather.sh Singapore",
@@ -175,7 +176,8 @@
             "brave-mail.google.com__mail_u_.-Default": "",
             "brave-web.whatsapp.com__-Default": "",
             "org.telegram.desktop": "",
-            "brave-browser": "󰖟"
+            "brave-browser": "󰖟",
+            "ncspot": ""
         },
         "on-scroll-up": "hyprctl dispatch workspace e+1",
         "on-scroll-down": "hyprctl dispatch workspace e-1"
