--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -117,7 +117,7 @@ misc {
 }
 
 $spd_opacity = 0.95
-windowrule = opacity $spd_opacity, ^(kitty)$
+windowrule = opacity 0.9, ^(kitty)$
 
 windowrule = float,        ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = size 70% 70%, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
@@ -128,6 +128,11 @@ windowrule = float, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = size 70% 70%, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = center, ^(brave-mail.google.com__mail_u_.-Default)$
+
+windowrule = float, ^(ncspot)$
+windowrule = size 70% 70%, ^(ncspot)$
+windowrule = opacity $spd_opacity, ^(ncspot)$
+windowrule = center, ^(ncspot)$
 
 windowrule = float, ^(org.telegram.desktop)$
 windowrule = center, ^(org.telegram.desktop)$
