--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -112,7 +112,7 @@ gestures {
 misc {
     disable_hyprland_logo = true
     force_hypr_chan = true
-    enable_swallow = true
+    enable_swallow = false
     swallow_regex = ^(kitty)$
 }
 
