--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -156,7 +156,7 @@ $mainMod = SUPER
 
 bind = ALT, Space, exec, $launcher1
 bind = $mainMod, Return, exec, $term
-bind = $mainMod, E, exec, pcmanfm
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, B, exec, brave
 
 #bind = SUPER, Space, pass, 
